--- a/css/styles.css
+++ b/css/styles.css
@@ -33,5 +33,9 @@ html,
             padding: 20px;
         }
       
-
+        .display-4 {
+            margin-bottom: 20px; 
+            font-weight: bold;
+            text-shadow: 2px 2px 4px #000;
+        }
         
