--- a/css/cameraslenses.css
+++ b/css/cameraslenses.css
@@ -68,6 +68,8 @@ footer {
  .item {
     max-width: 130px; /* Ajusta el ancho máximo de las cards según tus preferencias */
     margin-bottom: 5px; /* Espacio entre las cards */
+    margin-left: 0.5rem;
+     margin-right: 0.5rem;
     
 }
 .caption {
