--- a/css/cameraslenses.css
+++ b/css/cameraslenses.css
@@ -89,3 +89,7 @@ footer {
 .lead {
     font-size: 12px; /* Ajusta el tamaño de la fuente del texto y el precio */
 }
+
+.modal-body {
+    margin-top: 175px;
+}
