--- a/css/cameraslenses.css
+++ b/css/cameraslenses.css
@@ -61,9 +61,14 @@ footer {
 }
 
 .container {
-    text-align: center; /* Centra el contenido dentro del contenedor */
-    margin-top: 20px; /* Ajusta el margen superior según tus preferencias */
+    /*min-height: 100vh; /* Cambiado a min-height para evitar problemas de altura en pantallas pequeñas */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 70px;
+   
 }
+
   
  .item {
     max-width: 200px; /* Ajusta el ancho máximo de las cards según tus preferencias */
@@ -89,6 +94,67 @@ footer {
 .lead {
     font-size: 12px; /* Ajusta el tamaño de la fuente del texto y el precio */
 }
+
+.footer-wrapper{
+    padding-top:50px;	
+    padding-bottom:50px;
+    font-size: 14px;
+    text-align: center;
+}
+.footer-wrapper p{
+    color: rgba(255,255,255,.5)!important;
+}
+.footer-wrapper ul li{
+    margin-bottom: .8em;
+}
+.footer-wrapper ul li a{
+    text-decoration: none;
+    color: #fff;
+    transition: .3s ease;
+
+}
+.footer-wrapper ul li a:hover{
+    color:#fff;
+    font-size: 14px;
+    font-weight: bold;
+}
+.bg-black{
+    background: #262f38;
+    
+}
+.footer-wrapper .footer-adiv .btn.btn-footer{
+    padding: 16px;
+    border-radius: 99px;
+    margin-bottom: 40px;
+    color: #fff;
+    font-family:Poppins,sans-serif; 
+    width: 100%;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    background-color: transparent;
+    border: 1px solid rgba(255,255,255,.2);
+    transition: .3s ease;
+}
+
+.footer-wrapper .footer-adiv .btn.btn-footer:hover{
+    color:#fff;
+    font-weight: bold;
+}
+.copy-wrapper{
+    padding: 30px;
+    color: #fff;
+    border-top: 1px solid #fff;
+}
+.copy-wrapper a{
+    color: rgba(255,255,255,.5)!important;
+
+}
+.copy-wrapper a:hover{
+    color:#fff;
+    text-decoration: none;
+}
+
+
 
 
 
