--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ html,
             height: 100%;
             margin: 0;
             padding: 0;
+            font-family: 'Roboto', sans-serif;
         }
 
         .container {
@@ -46,7 +47,10 @@ a {
 }
 
 .card-text {
-color: black !important;}
+color: black !important;
+font-size: 20px;
+margin-top: 10px;
+}
 
 .icon-svg {
     width: 24px; /* Ajusta el tamaño según sea necesario */
@@ -160,26 +164,10 @@ footer {
 
 .image-container {
     position: relative;
-  }
+    overflow: hidden;
+}
 
-  .image-container:hover::before {
-    content: "Texto de información para esta imagen";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.7);
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    font-size: 75px;
-  }
+.image-container img {
+    transition: transform 0.3s ease-out;
+}
 
-  .image-container img {
-    width: 100%;
-    height: auto;
-    display: block;
-  }
